--- a/main.css
+++ b/main.css
@@ -2,16 +2,19 @@ body {
 
 }
 #header {
-
+    position:fixed;
 }
 #header-img{
     width: 100px;
     height: 60px;
+    
 }
 #nav-bar{
 display: block;
 float: right;
 margin-right: 50px;
+position: fixed;
+margin-top: 0px;
 }
 .nav-link{
 display: inline;
@@ -35,4 +38,30 @@ padding: 20px;
 #submit {
     display: inline-block;
     margin: 0 auto;
+}
+#main{
+    display: flex;
+    border: black;
+    height: 500px;
+}
+#sub1{
+    width: 500px;
+    height: 300px;
+    background: blue;
+}
+#sub2{
+    width: 500px;
+    height: 300px;
+    background: pink;
+}
+#sub3{
+    width: 500px;
+    height: 300px;
+    background: yellow;
+}
+
+@media (max-width: 100px) { 
+    #main{
+        width: 70px;
+    }
 }
