--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
 }
 #header {
     position:fixed;
+    float: right;
 }
 #header-img{
     width: 100px;
@@ -10,7 +11,7 @@ body {
     
 }
 #nav-bar{
-display: block;
+display: inline;
 float: right;
 margin-right: 50px;
 position: fixed;
@@ -59,6 +60,18 @@ padding: 20px;
     height: 300px;
     background: yellow;
 }
+
+.flex-container {
+    display: flex;
+    background-color: DodgerBlue;
+  }
+  
+  .flex-container > div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+  }
 
 @media (max-width: 100px) { 
     #main{
